hero section boulder wasn't working on iphone safari or chrome, fixed the issue, accordion tweaks, added some link to navbar

--- a/src/Components/Accordion/Accordion.scss
+++ b/src/Components/Accordion/Accordion.scss
@@ -11,11 +11,12 @@
             font-weight: bold;
         }
         p{
-            font-size: 0.75rem;
+            font-size: 0.9rem;
             font-family: "Bricolage Grotesque";
             font-weight: normal;
 
-            span{
+            a{
+                color: #B8E5ED;
                 text-decoration: underline;
             }
         }
@@ -23,7 +24,7 @@
     .accordionContainer{
         display: flex;
         justify-content: space-between;
-        gap: 1rem;
+        gap: 0.7rem;
         margin-top: 1.5rem;
         @media (max-width: 766px){
             flex-direction: column;
@@ -43,7 +44,11 @@
             }
     
             span, p {
+                max-width: 1000px;
                 font-family: "Reddit Sans";
+                // text-wrap: nowrap;
+                margin-left: 0.1rem;
+
             }
         }
     }
