--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -1,4 +1,5 @@
 .price-button {
+  font-family: "Bricolage Grotesque";
     background-color: #CCEDF4;
     color: #011524;
     font-weight: 500;
