--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -4,8 +4,8 @@ footer {
     justify-content: space-between;
     align-items: center;
     color: #B8E5ED;
-    font-size: 0.8rem;
-    padding: 2rem 1rem;
+    font-size: 0.9rem;
+    padding: 2rem 2rem;
     font-weight: 500;
 
     @media(max-width: 393px){
