--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -21,17 +21,7 @@
 
     }
 
-    // #stars{
-    //     position: absolute;
-    //     z-index: 1; 
-    //     top: -50%;
-    //     width: 100%;
-    //     height: 500px;
-    //     object-fit: cover;   
-    //     object-position: center;
-    //     border: 2px solid red;
-    //     pointer-events: none; 
-    // }
+
     h1{
         font-size: 2.5rem;
         max-width: 900px;
@@ -47,7 +37,7 @@
     .eventsContainer{
         // border: 2px solid orange;
         width: fit-content;
-        margin-top: 1.5rem;
+        margin-top: 0.8rem;
         margin-left: 7rem;
         display: flex;
         align-items: center;
@@ -82,10 +72,10 @@
 
     .outer .inner{
         // text-wrap: nowrap;
+        opacity: 0.8;
         font-family: "Reddit Sans";
-
         display: flex;
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         gap: 0.5rem;
         text-decoration: underline;
         font-weight: normal;
